force-app/main/default/objects/Vendor_Partner_Presence__c/Vendor_Partner_Presence__c.object-meta.xml
<CustomObject>
    <label>Vendor Partner Presence</label>
    <nameField>
        <displayFormat>VPP{0000}</displayFormat>
        <label>Vendor Partner Presence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Partner Presences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>