force-app/main/default/objects/Vendor_Partner_Presence__c/fields/Capability__c.field-meta.xml
<CustomField>
    <fullName>Capability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capability</label>
    <type>Checkbox</type>
</CustomField>