force-app/main/default/objects/Vendor_Partner_Presence__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vendor Partner Presences</relationshipLabel>
    <relationshipName>Vendor_Partner_Presences</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>