force-app/main/default/objects/Vendor_Partner_Presence__c/fields/Data_Center_H_F_Support__c.field-meta.xml
<CustomField>
    <fullName>Data_Center_H_F_Support__c</fullName>
    <label>Data Center H&amp; F Support</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>