force-app/main/default/objects/Vendor_Partner_Presence__c/fields/DC_BF_Support_for_Server_Equipment__c.field-meta.xml
<CustomField>
    <fullName>DC_BF_Support_for_Server_Equipment__c</fullName>
    <label>DC B/F Support for Server Equipment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>