force-app/main/default/objects/Vendor_Partner_Presence__c/fields/DesktopLaptop_Spares__c.field-meta.xml
<CustomField>
    <fullName>DesktopLaptop_Spares__c</fullName>
    <label>Desktop/Laptop Spares</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>