force-app/main/default/objects/Vendor_Partner_Presence__c/fields/Name_of_Country_Directly_Supported__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Country_Directly_Supported__c</fullName>
    <label>Name of Country Directly Supported</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>