force-app/main/default/objects/Vendor_Partner_Presence__c/fields/Printer_MFD_Support__c.field-meta.xml
<CustomField>
    <fullName>Printer_MFD_Support__c</fullName>
    <label>Printer / MFD Support</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>