force-app/main/default/objects/Vendor_Partner_Presence__c/fields/Tape_Management_Support__c.field-meta.xml
<CustomField>
    <fullName>Tape_Management_Support__c</fullName>
    <label>Tape Management Support</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>