force-app/main/default/objects/Vendor_Partner_Presence__c/fields/Telecom_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Telecom_Equipment__c</fullName>
    <label>Telecom Equipment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>