force-app/main/default/objects/Vendor_Partner_Presence__c/fields/WarehouseSpare_Management__c.field-meta.xml
<CustomField>
    <fullName>WarehouseSpare_Management__c</fullName>
    <label>Warehouse/Spare Management</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>