force-app/main/default/objects/Vendor_Partner_Presence__c/recordTypes/Partner.recordType-meta.xml
<RecordType>
    <fullName>Partner</fullName>
    <active>false</active>
    <label>Partner</label>
</RecordType>